# PythonFMU3

./: .gitignore  .readthedocs.yaml  DockerFile  MANIFEST.in  README.md  mkdocs.yml  setup.cfg  terminalsAndIcons.xml
.github/workflows/: main.yml  publish.yml
docker/: DockerFile  DockerFile.backup  bld_all.bat  bld_linux.bat  bld_win.bat  publish.bat  upload.bat
docs/: index.md  install.md  usage.md  usageMX.md
docs/source/: conf.py  dependencies.md  dependencies.rst  index.rst  install.md  install.rst  usage.md  usage.rst
examples/: Enum.py  alltypes.py  arraytypes.py  bouncingBall.py  bouncingBall_me.py  bouncingBall_with_geometry.py  counter.py  cube.py  cube_reserved.py  dahlquist_me.py  dahlquist_me_cs.py  demoslave.py  geom_input.py  linearTransform.py  linearTransformVariable.py  mldemo.py  robertson_me.py  runner.py  runner2.py  slave.py  sympyslave.py  vanderpol_me.py
pythonfmu/: __init__.py  builder.py  enums.py  fmi2slave.py  fmi3slave.py  osutil.py  variables.py
pythonfmu/pythonfmu-export/: CMakeLists.txt
pythonfmu/tests/: test_csvslave.py  test_fmi3slave.py  test_integration.py  test_logger.py  (+2 more)
pythonfmu3/: __init__.py  __main__.py  builder.py  cosimulation.py  csvbuilder.py  enums.py  fmi3slave.py  modelexchange.py  osutil.py  type_definitions.py  unit.py  variable_types.py  variables.py
pythonfmu3/pythonfmu-export/src/: CMakeLists.txt
pythonfmu3/pythonfmu-export/src/cppfmu/: cppfmu_common.hpp  cppfmu_cs.cpp  cppfmu_cs.hpp  fmi_functions.cpp
pythonfmu3/pythonfmu-export/src/pythonfmu/: PySlaveInstance.cpp  PySlaveInstance.hpp
(+30 files in other folders)
